argocd/apps/vaultwarden/manifests/vs.yaml
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: bitwarden-vs
spec:
  hosts:
  - bitwarden.yanello.net
  gateways:
  - istio-system/kube-gateway
  http:
  - route:
    - destination:
        host: bitwarden
        port:
          number: 80
